[package]
name = "revm-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
url = "2.3.1"
text-colorizer= "1.0"
reqwest = { version = "0.11.1", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
